# avocado-schema

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
schema/: Cargo.toml  README.md
schema/src/: lib.rs
schema/src/core/: value.rs
schema/src/core/constraint/: mod.rs
schema/src/core/constraint/number/: enumeration.rs  exclusive_maximum.rs
schema/src/core/constraint/object/: required.rs
schema/src/core/constraint/string/: max_length.rs
schema/src/core/field/: array.rs  boolean.rs  date.rs  datetime.rs  email.rs  float.rs  integer.rs  mod.rs  object.rs  string.rs  time.rs  uinteger.rs
schema/src/visitor/: validator.rs
schema_derive/: Cargo.toml  README.md
schema_derive/src/: lib.rs  reflect.rs
schema_derive/tests/: reflect.rs
src/: lib.rs
src/base/: field.rs  mod.rs  visitor.rs
src/core/: array.rs  boolean.rs  float.rs  integer.rs  mod.rs  object.rs  string.rs
src/core/constraint/: mod.rs
src/core/constraint/array/: unique.rs
src/core/constraint/common/: enumeration.rs  mod.rs  typed.rs
src/core/constraint/float/: enumeration.rs  exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs
src/core/constraint/integer/: enumeration.rs  exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs  mod.rs
src/core/constraint/number/: enumeration.rs  exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs  mod.rs
src/core/constraint/object/: required.rs
src/core/constraint/string/: enumeration.rs  max_length.rs  min_length.rs  mod.rs  pattern.rs
src/core/constraint/string/format/: date.rs  datetime.rs  email.rs  mod.rs  time.rs
src/core/field/: array.rs  boolean.rs  date.rs  datetime.rs  email.rs  float.rs  integer.rs  mod.rs  object.rs  string.rs  time.rs  uinteger.rs
src/core/visitor/: validator.rs
src/visitor/: validator.rs
