[package]
name = "avocado-schema-derive"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "A derive macro to support runtime reflection of struct values"
repository = "https://github.com/zwnormal/avocado-schema/"
readme = "README.md"
publish = true
keywords = ["derive", "reflect", "reflection"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = ["extra-traits"] }
quote = "1.0"
avocado-schema = { path = "../schema" }
proc-macro2 = "1.0.69"

[[test]]
name = "tests"
path = "tests/reflect.rs"
